# East

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/east-build/: Cargo.toml
crates/east-build/src/: cmake.rs  error.rs  lib.rs
crates/east-cli/: Cargo.toml
crates/east-cli/src/: main.rs
crates/east-cli/tests/: cli_config.rs  cli_ext_commands.rs  cli_init.rs  cli_init_v2.rs  cli_script_path.rs  cli_update.rs
crates/east-command/: Cargo.toml
crates/east-command/src/: error.rs  lib.rs  registry.rs  template.rs
crates/east-config/: Cargo.toml
crates/east-config/src/: config.rs  error.rs  lib.rs  manifest_config.rs  path.rs  store.rs  value.rs
crates/east-config/tests/: manifest_config.rs
crates/east-manifest/: Cargo.toml
crates/east-manifest/src/: error.rs  lib.rs  model.rs  path_resolve.rs  resolve.rs
crates/east-manifest/tests/: commands.rs  manifest_self.rs  path_resolve.rs  resolve.rs
crates/east-runner/: Cargo.toml
crates/east-runner/src/: lib.rs
crates/east-vcs/: Cargo.toml
crates/east-vcs/src/: error.rs  git.rs  lib.rs
crates/east-workspace/: Cargo.toml
crates/east-workspace/src/: error.rs  lib.rs  state.rs  workspace.rs
docs/design/: phase-1.md  phase-1.zh-CN.md  phase-2.5.md  phase-2.5.zh-CN.md  phase-2.6.md  phase-2.6.zh-CN.md  phase-2.md  phase-2.zh-CN.md  phase-3.md  phase-3.zh-CN.md
docs/dev/: dependency-policy.md  dependency-policy.zh-CN.md  phase-1.md  phase-1.zh-CN.md  phase-2.5.md  phase-2.5.zh-CN.md  phase-2.6.md  phase-2.6.zh-CN.md  phase-2.7.md  phase-2.7.zh-CN.md  phase-2.md  phase-2.zh-CN.md
scripts/: bump-version.sh
