[workspace]
resolver = "2"
members = [
    "crates/east-manifest",
    "crates/east-vcs",
    "crates/east-config",
    "crates/east-workspace",
    "crates/east-command",
    "crates/east-runner",
    "crates/east-build",
    "crates/east-cli",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/TrekMax/East"

# Shared dependency versions. Member crates use `dep.workspace = true`.
# See docs/dev/dependency-policy.md for the version pinning policy.
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
glob-match = "0.2"
indicatif = "0.17"
miette = { version = "7", features = ["derive", "fancy"] }
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert_cmd = "2"
predicates = "3"
