[package]
name = "east-build"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "`CMake` wrapper for east"

[dependencies]
east-config = { path = "../east-config" }
east-workspace = { path = "../east-workspace" }
glob.workspace = true
miette.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
