[package]
name = "east-build-util"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "`CMake` wrapper for east"

[dependencies]
east-config = { version = "0.1.2", path = "../east-config" }
east-workspace = { version = "0.1.2", path = "../east-workspace" }
glob = "0.3"
miette.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
