[package]
name = "east-cli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entrypoint for east"

[[bin]]
name = "east"
path = "src/main.rs"

[dependencies]
clap.workspace = true
east-command = { version = "0.2.1", path = "../east-command" }
east-config = { version = "0.2.1", path = "../east-config" }
east-manifest = { version = "0.2.1", path = "../east-manifest" }
east-vcs = { version = "0.2.1", path = "../east-vcs" }
east-workspace = { version = "0.2.1", path = "../east-workspace" }
indicatif.workspace = true
miette.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
