[package]
name = "east-config"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-layer TOML configuration for east"

[dependencies]
miette = { version = ">=7.0, <7.5", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = ">=3.10, <3.19"
