[package]
name = "east-config"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-layer TOML configuration for east"

[dependencies]
miette.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
