[package]
name = "east-manifest"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Manifest data model, YAML parsing, and import resolution for east"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = ">=3.10, <3.19"
