[package]
name = "east-manifest"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Manifest data model, YAML parsing, and import resolution for east"

[dependencies]
glob-match.workspace = true
miette.workspace = true
regex-lite.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
