[package]
name = "east-vcs"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git operations via shell-out to system git for east"

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
